eq spacing and cross ref

--- a/semantic_parsing.tex
+++ b/semantic_parsing.tex
@@ -1,6 +1,6 @@
 \chapter{跨领域上下文相关语义分析}
 
-\section{数据集}
+\section{数据集} \label{dataset}
 
 本文主要使用最新的SParC\cite{sparc19}数据集作为主要的性能指标。它是一个大规模的，上下文相关的，具有SQL标注的语义分析数据集。
 
