--- a/experiments.tex
+++ b/experiments.tex
@@ -2,7 +2,7 @@
 
 \section{评价指标}
 
-如\ref{dataset}节所述，本文使用主要使用最新的SParC数据集作为性能指标。我们使用预测的和标注的SQL语句间的“完全集合匹配精确度”。为避免不影响SQL语义的顺序问题，跟随 [3]中的做法，我们并不使用简单的字符串匹配方法，而是将SQL分解为多个子句，并对每个子句分别按照语义进行忽略顺序的“集合匹配”。本文主要报告两种指标：问题准确率，按照SQL语句统计，对所有交互中的每个SQL语句分别判断是否匹配；交互准确率，按交互统计，仅整个交互中所有查询均匹配才将该交互计算为匹配。
+如\ref{dataset}节所述，本文使用主要使用最新的SParC数据集作为性能指标。我们使用预测的和标注的SQL语句间的“完全集合匹配精确度”。为避免不影响SQL语义的顺序问题，跟随SParC\cite{sparc19}中的做法，我们并不使用简单的字符串匹配方法，而是将SQL分解为多个子句，并对每个子句分别按照语义进行忽略顺序的“集合匹配”。本文主要报告两种指标：问题准确率，按照SQL语句统计，对所有交互中的每个SQL语句分别判断是否匹配；交互准确率，按交互统计，仅整个交互中所有查询均匹配才将该交互计算为匹配。
 
 \section{基线方法}
 
