--- a/scutthesis.bib
+++ b/scutthesis.bib
@@ -161,7 +161,7 @@ edition = {ICML Neural Abstract Machines \& Program Induction workshop, 2018},
   url       = {https://www.aclweb.org/anthology/N19-1423},
 }
 
-@InProceedings{yu-etal-2018-syntaxsqlnet,
+@InProceedings{syntaxsqlnet18,
   author    = {Yu, Tao and Yasunaga, Michihiro and Yang, Kai and Zhang, Rui and Wang, Dongxu and Li, Zifan and Radev, Dragomir},
   booktitle = {Proceedings of the 2018 Conference on Empirical Methods in Natural Language Processing},
   title     = {{S}yntax{SQLN}et: Syntax Tree Networks for Complex and Cross-Domain Text-to-{SQL} Task},
@@ -245,4 +245,21 @@ edition = {ICML Neural Abstract Machines \& Program Induction workshop, 2018},
     doi = "10.18653/v1/P19-1444",
     pages = "4524--4535",
     abstract = "We present a neural approach called IRNet for complex and cross-domain Text-to-SQL. IRNet aims to address two challenges: 1) the mismatch between intents expressed in natural language (NL) and the implementation details in SQL; 2) the challenge in predicting columns caused by the large number of out-of-domain words. Instead of end-to-end synthesizing a SQL query, IRNet decomposes the synthesis process into three phases. In the first phase, IRNet performs a schema linking over a question and a database schema. Then, IRNet adopts a grammar-based neural model to synthesize a SemQL query which is an intermediate representation that we design to bridge NL and SQL. Finally, IRNet deterministically infers a SQL query from the synthesized SemQL query with domain knowledge. On the challenging Text-to-SQL benchmark Spider, IRNet achieves 46.7{\%} accuracy, obtaining 19.5{\%} absolute improvement over previous state-of-the-art approaches. At the time of writing, IRNet achieves the first position on the Spider leaderboard.",
+}
+
+@article{cao19,
+  author  = {曹金超 and 黄滔 and 陈刚 and 吴晓凡 and 陈珂},
+  title   = {自然语言生成多表SQL查询语句技术研究},
+  journal = {计算机科学与探索},
+  pages   = {1-10},
+  year    = {2019},
+  url     = {http://kns.cnki.net/kcms/detail/11.5602.tp.20191014.0916.002.html}
+}
+
+@article{sqlnet17,
+  title={SQLNet: Generating Structured Queries From Natural Language Without Reinforcement Learning},
+  author={Xiaojun Xu and Chang Liu and Dawn Xiaodong Song},
+  journal={ArXiv},
+  year={2017},
+  volume={abs/1711.04436}
 }
