--- a/text_to_sql.tex
+++ b/text_to_sql.tex
@@ -100,7 +100,7 @@
 \end{equation}
 
 \begin{table}[]
-    \begin{tabularx}{\linewidth}{llll}
+    \begin{tabularx}{\linewidth}{ll|l|l}
     \hline
     x类型 & y类型 & 关系类型              & 描述                 \\ \hline
     表   & 表   & self-table        & 同一表名中的多个单词         \\
