--- a/scutthesis.tex
+++ b/scutthesis.tex
@@ -1,19 +1,9 @@
 \documentclass[pdfcover,bachelor]{scutthesis}
-\usepackage{fontspec}
-\usepackage{color}
-\usepackage{array}
-\usepackage{longtable}
 \usepackage{graphicx}
-\usepackage{algorithmic}
-%\usepackage[ruled,vlined,algochapter]{algorithm2e}
-\usepackage{multirow}
 \usepackage{bm}
 \usepackage[inline]{enumitem}
+\usepackage{wrapfig}
 % \usepackage{setspace}
-
-% \makeatletter% Set distance from top of page to first float
-% \setlength{\@fptop}{5pt}
-% \makeatothe
 
 \usepackage[hidelinks]{hyperref}
 
@@ -21,17 +11,6 @@
 	pdfauthor={胡玮文},
 	pdfkeywords={深度学习, 自然语言处理, 语义分析, SQL, 自动编程},
 	pdfstartview=FitH}
-
-% \usepackage{listings}
-% \usepackage{xunicode}
-% \renewcommand{\lstlistingname}{列表}
-
-% \newcommand{\kui}[1]{{\color{black} #1}}
-% \newcommand{\zhuang}[1]{{\color{red} #1}}
-% \newcommand{\bohan}[1]{{\color{black} #1}}
-
-% \newcommand{\theHalgorithm}{\arabic{algorithm}}
-% \newcommand{\tabincell}[2]{\begin{tabular}{@{}#1@{}}#2\end{tabular}}
 
 \def\softmax{\mathrm{softmax}}
 
