--- a/text_to_sql.tex
+++ b/text_to_sql.tex
@@ -131,9 +131,9 @@
 
 \subsection{SQL语句编辑机制}
 
-如\citet{edit19}中介绍的，在用户和和系统交互的过程中，倾向于询问一系列紧密相关的问题。需要生成的SQL语句通常和上一轮交互中的SQL语句是有很大部分是重叠的。随着交互的不断进行，SQL语句会越来越复杂，其平均长度会越来越长，但也有更多的标记是和之前的query重叠，需要新增的标记数量是比较稳定的。
+如\citet{edit19}介绍的，在用户和和系统交互的过程中，倾向于询问一系列紧密相关的问题。需要生成的SQL语句通常和上一轮交互中的SQL语句是有很大部分是重叠的。随着交互的不断进行，SQL语句会越来越复杂，其平均长度会越来越长，但也有更多的标记是和之前的query重叠，需要新增的标记数量是比较稳定的。
 
-基于这样的观察结果， [5]在解码器中加入了SQL语句编辑机制。具体实现包括在上下文向量中加入了上一语句的信息，以及在输出层中加入了拷贝开关，并增加了拷贝的标记的输出路径，具体将会在下文介绍。
+基于这样的观察结果，EditSQL\cite{edit19}在解码器中加入了SQL语句编辑机制。具体实现包括在上下文向量中加入了上一语句的信息，以及在输出层中加入了拷贝开关，并增加了拷贝的标记的输出路径，具体将会在下文介绍。
 
 \subsection{解码器具体实现}
 
