自然语言查询“展示前3个人”

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -12,4 +12,4 @@
 
 关系编码机制虽然证实有效，但在本文的最终的实验中并未取得很显著的提升。尽管如此，我认为这种方式是非常灵活的，它可以将任意预定义的关系融入被广泛使用的注意力机制中。这个机制也能看作是注意力机制和图神经网络的结合。其能力还有待进一步挖掘，其应用领域也很可能不局限于自然语言到SQL转换任务上。
 
-我们距离真正可用的数据库自然语言接口系统还有一定距离。比如在本文中，预测的SQL语句并不包含常量（比如“展示前3个人”中的“3”）。此外系统预测的准确率水平依然较低，可能难以为用户提供令人满意的服务质量。还需要更多的研究以提供改进。
+我们距离真正可用的数据库自然语言接口系统还有一定距离。比如在本文中，预测的SQL语句并不包含常量（比如自然语言查询“展示前3个人”中的“3”）。此外系统预测的准确率水平依然较低，可能难以为用户提供令人满意的服务质量。还需要更多的研究以提供改进。
