--- a/experiments.tex
+++ b/experiments.tex
@@ -19,19 +19,7 @@
 \begin{table}
     \centering
     \caption{SParC实验总体结果}
-    \begin{tabular}{l|rr}
-    \hline\hline
-                        & 问题准确率 & 交互准确率 \\ \hline
-    SyntaxSQL-con       & 18.5  & 4.3   \\
-    CD-Seq2Seq          & 21.9  & 8.1   \\
-    EditSQL with   BERT & 47.2  & 29.5  \\
-    本文模型 with BERT      & 54.3  & 34.6  \\
-    本文模型 with XLNet     & \textbf{58.5}  & \textbf{39.6}  \\ \hline
-    \multicolumn{3}{l}{使用标注的历史SQL查询}    \\ \hline
-    EditSQL with   BERT & 53.4  & 29.2  \\
-    本文模型 with BERT      & 60.7  & 34.6  \\
-    本文模型 with XLNet     & \textbf{64.3}  & \textbf{39.3}  \\ \hline\hline
-    \end{tabular}
+    \input{table/overall.tex}
     \label{overall-results}
 \end{table}
 
@@ -89,13 +77,7 @@ EditSQL也进行了SQL预处理，但没有对此进行讨论。EditSQL的预处
 \begin{table}
     \centering
     \caption{消融实验结果}
-    \begin{tabular}{l|rr}
-    \hline\hline
-            & 问题准确率 & 交互准确率 \\ \hline
-    本文模型    & 58.5  & 39.6  \\
-    - 上下文编码 & 54.2  & 33.9  \\
-    - 关系编码  & 57.1  & 38.9  \\ \hline\hline
-    \end{tabular}
+    \input{table/ablation.tex}
     \label{ablation-results}
 \end{table}
 
