--- a/presentation.tex
+++ b/presentation.tex
@@ -77,6 +77,7 @@
   \begin{enumerate}
     \item 将所有在SQL中引用过的表添加到FROM子句中。
     \item 根据外键关系，将数据库中的所有表构造成无向图，并使用Kruskal算法求解包含当前FROM子句中的表的最小生成树，根据生成树的边和节点来重建JOIN子句中的ON部分。
+    \item 有多张表时，恢复别名
   \end{enumerate}
 \end{frame}
 \begin{frame}
@@ -116,6 +117,15 @@
 \subsection{关系编码机制}
 \begin{frame}
   \frametitle{关系编码机制}
+  \begin{itemize}
+    \item 数据库架构中包含有主键，外键等信息。这些信息被以往的很多方法忽略
+    \item 本文将数据库架构的编码结合进预训练注意力机制中
+  \end{itemize}
+
+  \begin{figure}
+    \includegraphics[page=10,width=\textwidth]{figure/figures.pdf}
+    \caption{关系编码机制示意\footnote{为了展示简洁，标点符号对应的表示已省略，它们全部使用“其他”关系}}
+  \end{figure}
 \end{frame}
 
 \section{实验}
