--- a/sql/def.tex
+++ b/sql/def.tex
@@ -3,5 +3,7 @@
 \def\SELECT{\kw{SELECT }}
 \def\FROM{\kw{FROM }}
 \def\JOIN{\kw{JOIN }}
+\def\WHERE{\kw{WHERE }}
 \def\AS{\kw{AS }}
 \def\ON{\kw{ON }}
+\def\AND{\kw{AND }}
