--- a/presentation.tex
+++ b/presentation.tex
@@ -241,7 +241,7 @@
   \begin{block}{工作展望}
     \begin{itemize}
       \item 使用类似ORM系统的方式，继续改进预处理方案
-      \item 强化关系编码效果
+      \item 强化关系编码效果，并可应用于其他领域
       \item 数据库自然语言接口系统的进一步研究与实现
     \end{itemize}
   \end{block}
