--- a/presentation.tex
+++ b/presentation.tex
@@ -169,7 +169,7 @@
 
   \begin{figure}
     \includegraphics[page=10,width=\textwidth]{figure/figures.pdf}
-    \caption{关系编码机制示意\footnote{为了展示简洁，标点符号对应的表示已省略，它们全部使用“其他”关系}}
+    \caption{关系编码机制示意\footnote{为了展示简洁，标点符号对应的表示已省略，它们全部使用“其他”关系。此处仅展示了部分关系类型。}}
   \end{figure}
 \end{frame}
 
