--- a/scutthesis.tex
+++ b/scutthesis.tex
@@ -7,7 +7,7 @@
 
 \usepackage[hidelinks]{hyperref}
 
-\hypersetup{pdftitle={数据库的自然语言接口关键技术研究},
+\hypersetup{pdftitle={基于数据库的自然语言接口关键技术研究},
 	pdfauthor={胡玮文},
 	pdfkeywords={深度学习, 自然语言处理, 语义分析, SQL, 自动编程},
 	pdfstartview=FitH}
